# x86-kernel

./: .deps.sh  .target.json  Cargo.toml  README.md  gdt.rs
.cargo/: config
src/: .jots  allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/tests/: boot.rs
tests/: allocation.rs  boot.rs  overflow.rs
