[package]
name = "x86-kernel"
version = "0.1.0"
authors = ["mugoh <mugoh.ks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
