[package]
name = "x86-kernel"
version = "0.1.0"
authors = ["mugoh <mugoh.ks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 180

[dependencies]
bootloader = "0.8.0"
volatile = "0.2.6"
lazy_static = {version = "1.0", features = ["spin_no_std"]}
spin = "0.5.2"
x86_64 = "0.8"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"
pc-keyboard =  "0.3.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[test]]
name = "overflow"
harness = false
